@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.9-13
-Date: 2013-07-28
+Date: 2013-07-29
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
