@@ -35,6 +35,7 @@ export("+.section",
        coriolis,
        ctdAddColumn,
        ctdDecimate,
+       ctdFindDescents,
        ctdTrim,
        ctdUpdateHeader,
        ctimeToSeconds,
