@@ -1,4 +1,5 @@
 0.9-13
+- ctdFindDescents() added
 - as.ctd(): new arguments filename etc
 - remove oceBisect(), which merely reproduces uniroot()
 - move all data to library(ocedata)
